src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&display=swap");

@import "tailwindcss";

@import "./icons.css";

@source inline('{sm:,md:,lg:,xl:,}bg-{top-left,top,top-right,center,top-left,right,bottom-left,bottom-right,bottom}');

:root {
  --container-lg: 1216px;
}

@theme {
  --color-chardon: #f9f1e9;
  --color-figure-stone: #eed9c3;
  --color-elba: #252621;
  --color-philippine-grey: #8c8c8c;
  --color-sea-blue: #05668d;
  --color-sea-blue-dark: #044862;
  --color-fog: #3b3c4a;
  --font-sans: "Manrope", sans-serif;
  --font-serif: "Lora", "serif";
  --container-lg: var(--content-max-width);
  --breakpoint-lg: 76rem;
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.inline-adsbygoogle > div,
.video-container {
  position: relative !important;
  width: 100% !important;
  height: 0 !important;
  overflow: hidden !important;
  /* 16:9 aspect ratio */
  padding-bottom: 56.25% !important;
}

.inline-adsbygoogle iframe,
.video-container iframe {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
}

